// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Texts should render correctly (snapshot) 1`] = `
<div>
  <a
    class="ant-typography mdx-hash-link anchor"
  >
    Text
  </a>
</div>
`;

exports[`Texts should render correctly (snapshot) 2`] = `
<div>
  <span
    class="ant-typography"
  >
    <strong>
      Text
    </strong>
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 3`] = `
<div>
  <span
    class="ant-typography"
  >
    <i>
      Text
    </i>
  </span>
</div>
`;

exports[`Texts should render correctly (snapshot) 4`] = `
<div>
  <span
    class="ant-typography"
  >
    <del>
      Text
    </del>
  </span>
</div>
`;
